# woodwork

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  =  MANIFEST.in  Makefile  README.md  Untitled.ipynb  Woodwork Demo.ipynb  WorkingExample.ipynb  backport_release.md  conda_config.py  contributing.md  dask-requirements.txt  dev-requirements.txt  koalas-requirements.txt  learning_woodwork.ipynb  minimum_req.py  minimum_requirements.txt  minimum_test_dependencies.txt  pyproject.toml  release.md  renovate-config.json  requirements.txt  script.py  setup.cfg  setup.py  spark-requirements.txt  test-requirements.txt  test_evalml.py
.circleci/: conda_config.py  config.yml
.github/: PULL_REQUEST_TEMPLATE.md  auto_assign.yml  minimum_dependency_generator.py
.github/ISSUE_TEMPLATE/: blank_issue.md  bug_report.md  config.yml  documentation_improvement.md  feature_request.md
.github/workflows/: auto_approve_dependency_PRs.yaml  auto_approve_dependency_PRs.yml  build_docs.yaml  build_docs.yml  create_feedstock_pr.yaml  dependency_check.yml  install_test.yaml  install_test.yml  kickoff_featuretools_evalml_unit_tests.yaml  kickoff_featuretools_evalml_unit_tests.yml  kickoff_featuretools_unit_tests.yml  latest_dependency_check.yml  latest_dependency_checker.yaml  latest_dependency_checker.yml  latest_dependency_checker_v2.yml  latest_unit_tests.yml  lint_check.yaml  lint_check.yml  minimum_dependecy_check_unit_tests.yml  minimum_dependecy_checker_unit_tests.yml  minimum_dependency_check.yml  minimum_dependency_check_unit_tests.yml  minimum_dependency_checker.yaml  minimum_dependency_checker.yml  minimum_dependency_tests.yml  minimum_unit_tests.yml  minium_dependency_tests.yml  pull_request_check.yaml  release.yaml  release.yml  release_notes_updated.yaml  release_notes_updated.yml  simple_test_without_test_dependencies.yml  test_featuretools_with_main_branch.yml  test_without_test_dependencies.yaml  test_without_test_dependencies.yml  tests.yml  tests_with_latest_deps.yaml  tests_with_minimum_deps.yaml  unit_tests_with_latest_deps.yaml  (+5 more)
data_tables/: __init__.py  data_column.py  data_table.py  logical_types.py  utils.py
data_tables/demo/: api.py  retail.py
data_tables/demos/: __init__.py  retail.py
data_tables/tests/: conftest.py  test_utils.py  test_version.py
data_tables/tests/data_column/: test_data_column.py
data_tables/tests/data_table/: test_datatable.py
data_tables/tests/demo_tests/: test_retail.py
data_tables/tests/logical_types/: test_logical_types.py
datatables/: __init__.py  data_column.py  datatable.py  logical_types.py
datatables/tests/: test_version.py
docs/: Makefile  backport_release.md  notebook_cleaner.py  notebook_version_standardizer.py
docs/source/: api_reference.rst  changelog.rst  conf.py  disable-warnings.py  index.ipynb  index.rst  install.ipynb  install.md  install.rst  install_v2.md  install_v3.md  release_notes.rst  start.ipynb  start.rst
docs/source/_static/: style.css
docs/source/_templates/: data_check_class.rst  estimator_class.rst  layout.html  pipeline_class.rst  transformer_class.rst
docs/source/guides/: custom_types_and_type_inference.ipynb  guides_index.rst  logical_types_and_semantic_tags.ipynb  saving_and_loading_dataframes.ipynb  (+8 more)
superheroes.parquet/: part.0.parquet
tools/: minimum_dependency_generator.py  test_minimum_dependency_generator.py
tools/minimum_dependency/: dev-requirements.txt  minimum_dependency_generator.py  requirements.txt  test-requirements.txt  test_minimum_dependency_generator.py
woodwork/: Untitled.ipynb  __init__.py  __main__.py  accessor.py  accessor_utils.py  column_accessor.py  column_schema.py  config.py  data_column.py  data_table.py  datacolumn.py  datatable.py  deserialize.py  deserialize_accessor.py  deserializers.py  exceptions.py  indexers.py  inference.py  logical_types.py  pandas_backport.py  s3_utils.py  schema.py  schema_column.py  serialize.py  serialize_accessor.py  serializer_utils.py  serializers.py  series_accessor.py  statistics_utils.py  statistics_utils_old.py  table_accessor.py  table_schema.py  typing.py  utils.py
woodwork/demo/: __init__.py  api.py  retail.py
woodwork/deserializers/: __init__.py  arrow_deserializer.py  csv_deserializer.py  deserializer_base.py  feather_deserializer.py  orc_deserializer.py  parquet_deserializer.py  pickle_deserializer.py  utils.py
woodwork/serializers/: __init__.py  arrow_serializer.py  csv_serializer.py  feather_serializer.py  orc_serializer.py  parquet_serializer.py  pickle_serializer.py  serializer_base.py  utils.py
woodwork/statistics_utils/: __init__.py  _bin_numeric_cols_into_categories.py  _calculate_dependence_measure.py  _calculate_max_dependence_for_pair.py  _cast_nullable_int_and_datetime_to_int.py  _convert_ordinal_to_numeric.py  _determine_best_outlier_method.py  _get_box_plot_info_for_column.py  _get_dependence_dict.py  _get_describe_dict.py  _get_histogram_values.py  _get_medcouple_statistic.py  _get_mode.py  _get_mutual_information_dict.py  _get_numeric_value_counts_in_range.py  _get_recent_value_counts.py  _get_top_values_categorical.py  _get_valid_mi_columns.py  _get_value_counts.py  _infer_temporal_frequencies.py  _make_categorical_for_mutual_info.py  _medcouple_implementation.py  _parse_measures.py  _replace_nans_for_mutual_info.py  get_box_plot_info_for_column.py  get_describe_dict.py  get_mode.py  get_mutual_information_dict.py  replace_nans_for_mutual_info.py
woodwork/tests/: conftest.py  latest_core_dependencies.txt  latest_dask_dependencies.txt  latest_dependencies.txt  latest_koalas_dependencies.txt  minimum_core_requirements.txt  minimum_dask_requirements.txt  minimum_koalas_requirements.txt  minimum_test_requirements.txt  speed_test.py  test_cli.py  test_config.py  test_indexers.py  test_new_file.py  test_pandas_backport.py  test_utils.py  test_version.py
woodwork/type_sys/: __init__.py  inference_functions.py  logical_types.py  type_system.py  utils.py
woodwork/type_system/: __init__.py  inference_functions.py  logical_types.py  type_system.py  utils.py
(+95 files in other folders)
