[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "woodwork"
readme = "README.md"
description = "a data typing library for machine learning"
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
authors = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
maintainers = [
    {name="Alteryx, Inc.", email="open_source_support@alteryx.com"}
]
keywords = ["data science", "machine learning", "typing"]
license = {file = "LICENSE"}
requires-python = ">=3.8,<4"
dependencies = [
    "pandas >= 1.4.0, != 1.4.2",
    "scikit-learn >= 0.22",
    "python-dateutil >= 2.8.1",
    "scipy >= 1.4.0",
    "importlib-metadata == 5.1.0",
    "importlib-resources == 5.10.0"
]

[project.urls]
"Documentation" = "https://woodwork.alteryx.com"
"Source Code"= "https://github.com/alteryx/woodwork/"
"Changes" = "https://woodwork.alteryx.com/en/latest/release_notes.html"
"Issue Tracker" = "https://github.com/alteryx/woodwork/issues"
"Twitter" = "https://twitter.com/alteryxoss"
"Chat" = "https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA"

[project.optional-dependencies]
test = [
    "pytest == 7.0.1",
    "pytest-cov == 2.10.1",
    "pytest-xdist == 2.1.0",
    "boto3 >= 1.10.45",
    "moto[all] >= 3.0.7",
    "smart-open >= 5.0.0",
    "pyarrow >= 4.0.1",
]
dask = [
    "dask[dataframe] >= 2021.10.0 , !=2022.10.1",
]
spark = [
    "pyspark >= 3.2.0, <3.3.0",
    "pandas >= 1.4.3",
]
updater = [
    "alteryx-open-src-update-checker >= 2.1.0"
]
docs = [
    "Sphinx == 5.1.1",
    "nbsphinx == 0.8.9",
    "pydata-sphinx-theme == 0.9.0",
    "sphinx-inline-tabs == 2022.1.2b11",
    "sphinx-copybutton == 0.5.0",
    "myst-parser == 0.18.0",
    "nbconvert == 6.5.0",
    "ipython == 8.4.0",
    "jupyter == 1.0.0",
    "woodwork[dask]",
    "woodwork[spark]",
    "woodwork[test]",
]
dev = [
    "flake8 == 5.0.4",
    "isort == 5.10.1",
    "black[jupyter] == 22.6.0",
    "click >= 7.1.2, <8.1.0",
    "pre-commit >= 2.20.0",
    "woodwork[docs]",
    "woodwork[dask]",
    "woodwork[spark]",
    "woodwork[test]",
]
complete = [
    "woodwork[dask]",
    "woodwork[spark]",
    "woodwork[updater]",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "README.md",
]
"woodwork.data" = [
    "*.txt",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
    "/docs/*"
]

[tool.setuptools.dynamic]
version = {attr = "woodwork.version.__version__"}

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "woodwork/tests/*"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.isort]
profile = "black"
forced_separate = "woodwork"
known_first_party = "woodwork"
skip = "__init__.py"
multi_line_output = 3

[tool.black]
target-version = ['py310']

[tool.coverage.run]
source = ["woodwork"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if self._verbose:",
    "if verbose:",
    "if profile:",
    "pytest.skip"
]
