[metadata]
name = woodwork
version = attr: woodwork.version.__version__
author = Alteryx Inc.
license = BSD 3-clause
long_description = file: README.md
url = https://github.com/alteryx/woodwork/
long_description_content_type = text/markdown
author_email = open_source_support@alteryx.com
keywords = data science machine learning typing
description = a two-dimensional data object with labeled axes and typing information
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
project_urls =
    Documentation = https://woodwork.alteryx.com
    Source Code = https://github.com/alteryx/woodwork/
    Changes = https://woodwork.alteryx.com/en/latest/release_notes.html
    Issue Tracker = https://github.com/alteryx/woodwork/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-6inxevps-RSbpr9lsACE1kObXz4rIuA

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    pandas >= 1.3.0, <1.4.2
    scikit-learn >= 0.22
python_requires = >=3.7, <4

[options.extras_require]
dev = 
    %(test)s
    codecov == 2.1.12
    flake8 == 3.9.2
    isort == 5.9.3
    black == 22.3.0
    nbsphinx == 0.8.7
    pydata-sphinx-theme == 0.7.1
    Sphinx == 4.2.0
    sphinx-inline-tabs == 2021.3.28b7; python_version == '3.7'
    sphinx-inline-tabs == 2022.1.2b11; python_version >= '3.8'
    sphinx-copybutton == 0.4.0
    myst-parser == 0.16.1
    nbconvert == 6.4.5
    ipython == 7.31.1
    pygments == 2.10.0
    jupyter == 1.0.0
    pandoc == 1.1.0
    ipykernel == 6.4.2
    click >= 7.1.2, <8.1.0
    %(dask)s
    %(spark)s

test = 
    pip >= 21.3.1
    pytest == 7.0.1
    pytest-cov == 2.10.1
    pytest-xdist == 2.1.0
    boto3 >= 1.10.45
    moto[all] >= 3.0.7
    smart-open >= 5.0.0
    pyarrow >= 4.0.1

dask = 
    dask[dataframe] >= 2021.10.0

spark = 
    pyspark >= 3.2.0
    pandas <= 1.4.1

update_checker = 
    alteryx-open-src-update-checker >= 2.0.0

complete =
    %(dask)s
    %(spark)s
    %(update_checker)s

[options.package_data]
* =
    *.txt
    LICENSE
    README.md

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[options.data_files]
woodwork/data =
    woodwork/data/1-1000.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --doctest-modules
python_files = woodwork/tests/*
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
exclude = docs/*
max-line-length = 88
extend-ignore = E203
ignore = E501,W504,W503
per-file-ignores =
    **/__init__.py:F401
    **/tests/*:D

[isort]
profile=black
skip=__init__.py
multi_line_output=3
forced_separate=woodwork
known_first_party=woodwork
