[metadata]
name = woodwork
version = attr: woodwork.version.__version__
url = https://github.com/alteryx/woodwork/
download_url = https://pypi.org/project/woodwork/
project_urls =
    Documentation = https://woodwork.alteryx.com
    Source Code = https://github.com/alteryx/woodwork/
    Changes = https://woodwork.alteryx.com/en/latest/release_notes.html
    Issue Tracker = https://github.com/alteryx/woodwork/issues
    Twitter = https://twitter.com/alteryxoss
    Chat = https://join.slack.com/t/alteryx-oss/shared_invite/zt-182tyvuxv-NzIn6eiCEf8TBziuKp0bNA
author = Alteryx Inc.
author_email = open_source_support@alteryx.com
license = BSD 3-clause
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
keywords = data science, machine learning, typing
description = a data typing library for machine learning
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    pandas >= 1.4.0, != 1.4.2
    scikit-learn >= 0.22
    python-dateutil >= 2.8.1
    scipy >= 1.4.0
python_requires = >=3.8, <4

[options.extras_require]
dev =
    %(test)s
    flake8 == 3.9.2
    isort == 5.9.3
    black == 22.3.0
    nbsphinx == 0.8.7
    pydata-sphinx-theme == 0.7.1
    Sphinx == 4.2.0
    sphinx-inline-tabs == 2022.1.2b11
    sphinx-copybutton == 0.4.0
    myst-parser == 0.16.1
    nbconvert == 6.4.5
    ipython == 7.31.1
    pygments == 2.10.0
    jupyter == 1.0.0
    pandoc == 1.1.0
    ipykernel == 6.4.2
    click >= 7.1.2, <8.1.0
    pre-commit >= 2.20.0
    %(dask)s
    %(spark)s

test =
    pip >= 21.3.1
    pytest == 7.0.1
    pytest-cov == 2.10.1
    pytest-xdist == 2.1.0
    boto3 >= 1.10.45
    moto[all] >= 3.0.7
    smart-open >= 5.0.0
    pyarrow >= 4.0.1
    six>=1.11.0

dask =
    dask[dataframe] >= 2021.10.0

spark =
    pyspark >= 3.2.0, <3.3.0
    pandas >= 1.4.3

update_checker =
    alteryx-open-src-update-checker >= 2.0.0

complete =
    %(dask)s
    %(spark)s
    %(update_checker)s

[options.package_data]
* =
    *.txt
    LICENSE
    README.md
woodwork =
    data/*.txt

[options.exclude_package_data]
* =
    * __pycache__
    *.py[co]

[flake8]
exclude = docs/*
max-line-length = 88
extend-ignore = E203
ignore = E501,W504,W503
per-file-ignores =
    **/__init__.py:F401
    **/tests/*:D
